# dami

./: .travis.yml  Cargo.toml  Internals.md  README.md  Todo  katex-header.html  label.yml
.github/workflows/: label.yml  repo-labels.yml
doc/: 10-minutes.ipynb  Series.html  Series.md
examples/: read.rs  series.rs
examples/data/: test.json  test.xz
src/: PackageProblems.md  core.rs  enums.rs  io.rs  lib.rs  marcos.rs  plots.rs  prelude.rs
src/core/: block_manager.rs  common.rs  dataframe.rs  index.rs  series.rs
src/core/block_manager/: manager.rs  ops.rs  stats.rs
src/core/block_manager/manager/: stats.rs
src/core/dataframe/: generics.rs  ints.rs  ops.rs  stats.rs
src/core/index/: Index.rs  date_time.rs
src/core/series/: errors.rs  generic.rs  impls.rs  ints.rs  ops.rs  stats.rs  traits.rs
src/core/series/impls/: bigint.rs  float.rs  int.rs  string.rs
src/core/series/traits/: bigint.rs  floats.rs  ints.rs  strings.rs
src/io/: clipboard.rs  csv.rs  dtypes.rs  excel.rs  fwf.rs  hdf5.rs  json.rs  parser.rs  utils.rs
src/io/csv/: deserialize.rs
src/plots/: dataframe.rs  series.rs
