[package]
name = "dami"
version = "0.1.0"
authors = ["Steve  Tyler <stevetyler@zoho.xom>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=["stats"]
main = ["remote","stats"]
remote = ["ureq","url"]
read =["clipboard","hdf5","calamine"]
all = ["clipboard","read","stats","remote","regex"]
stats=["ndarray-stats","plotly"]
minimal=[]

[dependencies.regex]
version = "1.3"
optional=true
default-features = false
# regex currently requires the standard library, you must re-enable it.
features = ["std"]

[dependencies]
# Date and time support
chrono= "0.4.13"
prettytable = { git = "https://github.com/phsym/prettytable-rs", package = "prettytable-rs",default-features = false, features = ["evcxr"] }
# Add support for baggie
baggie = "0.2.1"
# Support for deserializing various data formats
serde={version="^1.0"}
# The underlying array for series and dataframe
ndarray = {version="0.13.1",features=["rayon"]}
# Deserializing javascript.
serde_json="1.0"
# Lazily evaluated data
lazy_static = "1.4.0"
# Loading lz compressed files
lzma-rs = "0.1.3"
# Wrap text when printing to the terminal
textwrap = "0.11"
# Numerial traits for floating point numbers
num-traits = "0.2"
rayon = "1.3.1"
noisy_float="0.1.12"
# Opening ZIP files
zip={ version="0.5.6", features=["default","bzip2"]}


# -------------------------------------------------------------
# ---------------Optional functions-----------------------------
# Clipboard access
clipboard = {version="0.5.0",optional=true}
# HDF5 support
hdf5 = {version="0.6.1",optional=true}

# Statistical functions
ndarray-stats = {version="0.3",optional=true}
plotly = {version="0.5.1",optional=true}

# Reading excel files
calamine = {version="0.16.1",optional=true}

# Fetching remote files
url = {version="2",optional=true}
ureq = { version="1.2.0",features=["tls"], default-features=false,optional=true}

[package.metadata.docs.rs]
# Add support for rendering mathematical functions in the doc.
rustdoc-args = [ "--html-in-header", "katex-header.html" ]

